force-app/main/default/objects/Passkey__x/Passkey__x.object-meta.xml
<CustomObject>
    <externalDataSource>DigitalIdentity</externalDataSource>
    <externalName>Passkey</externalName>
    <label>Passkey</label>
    <pluralLabel>Passkeys</pluralLabel>
</CustomObject>