force-app/main/default/objects/Passkey__x/fields/AAGUID__c.field-meta.xml
<CustomField>
    <fullName>AAGUID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the authenticator global unique identifier</description>
    <label>AAGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>