force-app/main/default/objects/Passkey__x/fields/CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedTime__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the Created Time of the Passkey</description>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>