force-app/main/default/objects/Passkey__x/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Aegis</complianceGroup>
    <description>Field that contains the Person Id that links to the Person Digital Identity object</description>
    <label>Person Digital Identity</label>
    <length>255</length>
    <referenceTo>PersonDigitalIdentity__x</referenceTo>
    <relationshipLabel>Passkeys</relationshipLabel>
    <relationshipName>Passkeys</relationshipName>
    <type>ExternalLookup</type>
</CustomField>